--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -411,3 +411,15 @@ p {
     margin-bottom: space(8);
   }
 }
+
+// ============================================
+// LANDSCAPE
+// ============================================
+
+@media (max-height: 500px) and (orientation: landscape) {
+  .content-block { margin-top: 4.5rem; }
+}
+
+@media (max-height: 400px) and (orientation: landscape) {
+  .content-block { margin-top: 3.5rem; }
+}
